--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,11 @@
     "@types/node": "^22.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/ws": "^8.5.12",
+    "dotenv": "^16.4.5",
+    "ws": "^8.18.0"
   }
 }
