--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/lodash": "^4.17.7",
     "@types/ws": "^8.5.12",
     "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
     "ws": "^8.18.0"
   }
 }
