--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-PORT=80
+PORT=81
+MONGO_URL=mongodb+srv://Sen:ckn7Mzob3sSjuGzH@webserver.qneqrhg.mongodb.net/?retryWrites=true&w=majority&appName=webserver
