--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/lodash": "^4.17.7",
+    "@types/mongoose": "^5.11.97",
     "@types/ws": "^8.5.12",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
+    "mongoose": "^8.5.2",
     "ws": "^8.18.0"
   }
 }
